# conversor

./: README.md  pyproject.toml
docs/: conf.py  conversor.rst  index.rst  modules.rst
src/conversor/: conversor.py
tests/: test_conversor.py
