[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversor"
dynamic = ["version"] # Indica que a string que indica a versão do projeto é "dinâmica" e será determinada em outro arquivo, neste caso src/conversor/__about__.py
description = "Converte entre graus Celsius e graus Fahrenheit e vice-versa"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["temperatura", "celsius", "fahrenheit"]
authors = [
  { name = "Matheus", email = "matheus.venturini@acad.ufsm.br" },
]
dependencies = [] # Aqui vão as dependências para quem for rodar o projeto utilizando "pip install conversor" 

[tool.hatch.envs.default]
dependencies = [ # Aqui estão as dependências para quem for trabalhar com o desenvolvimento do projeto
    "pytest",
    "ruff",
    "mypy",
    "sphinx",
    "myst-parser" # Para usar Markdown com o Sphinx. Neste projeto não será usado, mas vou deixar incluso apneas por acaso.
]

[tool.hatch.version]
path = "src/conversor/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/conversor tests}"

[tool.coverage.run]
source_pkgs = ["conversor", "tests"]
branch = true
parallel = true
omit = [
  "src/conversor/__about__.py",
]

[tool.coverage.paths]
conversor = ["src/conversor", "*/conversor/src/conversor"]
tests = ["tests", "*/conversor/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
